// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChapterTableRow > renders selected state > ChapterTableRow - selected 1`] = `
<div>
  <table>
    <tbody>
      <tr
        aria-describedby=""
        aria-disabled="false"
        aria-roledescription="sortable"
        class="MuiTableRow-root group css-1rpcg5g-MuiTableRow-root"
        role="button"
        tabindex="0"
      >
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium firstCell normal-case css-keh03v-MuiTableCell-root"
        >
          <div
            class="flex items-center gap-1 group-hover:gap-2"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall my-auto w-0 opacity-0 transition-all duration-300 ease-in-out group-hover:w-max group-hover:opacity-100 css-hxgng1-MuiSvgIcon-root"
              data-testid="DragIndicatorIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2m-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
            <div
              class="wmde-markdown wmde-markdown-color "
              style="background-color: transparent; color: inherit; font-size: inherit; font-family: inherit; text-transform: inherit;"
            >
              <p>
                Chapter 1
              </p>
            </div>
          </div>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium middleCell css-keh03v-MuiTableCell-root"
        >
          Author A
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium lastCell css-keh03v-MuiTableCell-root"
        >
          <div
            class="flex justify-between"
          >
            1–15 (15)
            <div
              class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary mb-auto ml-auto css-zv9ro0-MuiButtonGroup-root"
              role="group"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="DeleteOutlineIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM8 9h8v10H8zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </button>
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="EditIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                  />
                </svg>
              </button>
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ContentCopyIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2m0 16H8V7h11z"
                  />
                </svg>
              </button>
            </div>
            <span
              class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-1nu9cxd-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
            >
              <input
                checked=""
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                data-indeterminate="false"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="CheckBoxIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                />
              </svg>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ChapterTableRow > renders snapshot > ChapterTableRow 1`] = `
<div>
  <table>
    <tbody>
      <tr
        aria-describedby=""
        aria-disabled="false"
        aria-roledescription="sortable"
        class="MuiTableRow-root group css-1rpcg5g-MuiTableRow-root"
        role="button"
        tabindex="0"
      >
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium firstCell normal-case css-keh03v-MuiTableCell-root"
        >
          <div
            class="flex items-center gap-1 group-hover:gap-2"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall my-auto w-0 opacity-0 transition-all duration-300 ease-in-out group-hover:w-max group-hover:opacity-100 css-hxgng1-MuiSvgIcon-root"
              data-testid="DragIndicatorIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2m-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2m0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2m0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2"
              />
            </svg>
            <div
              class="wmde-markdown wmde-markdown-color "
              style="background-color: transparent; color: inherit; font-size: inherit; font-family: inherit; text-transform: inherit;"
            >
              <p>
                Chapter 1
              </p>
            </div>
          </div>
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium middleCell css-keh03v-MuiTableCell-root"
        >
          Author A
        </td>
        <td
          class="MuiTableCell-root MuiTableCell-sizeMedium lastCell css-keh03v-MuiTableCell-root"
        >
          <div
            class="flex justify-between"
          >
            1–15 (15)
            <div
              class="MuiButtonGroup-root MuiButtonGroup-outlined MuiButtonGroup-horizontal MuiButtonGroup-colorPrimary mb-auto ml-auto css-zv9ro0-MuiButtonGroup-root"
              role="group"
            >
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="DeleteOutlineIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM8 9h8v10H8zm7.5-5-1-1h-5l-1 1H5v2h14V4z"
                  />
                </svg>
              </button>
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="EditIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.996.996 0 0 0-1.41 0l-1.83 1.83 3.75 3.75z"
                  />
                </svg>
              </button>
              <button
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium opacity-0 group-hover:opacity-100 css-1jvz5sr-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ContentCopyIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2m0 16H8V7h11z"
                  />
                </svg>
              </button>
            </div>
            <span
              class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeSmall css-1nu9cxd-MuiButtonBase-root-MuiSwitchBase-root-MuiCheckbox-root"
            >
              <input
                class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
                data-indeterminate="false"
                type="checkbox"
              />
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-120dh41-MuiSvgIcon-root"
                data-testid="CheckBoxOutlineBlankIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                />
              </svg>
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
